--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 
 dependencies {
     compile group: 'net.java.dev.jna', name: 'jna', version: '4.5.0'
+    compile group: 'com.google.inject', name: 'guice', version: '4.1.0'
 }
 
 group 'org.jetbrains'
