--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile group: 'net.java.dev.jna', name: 'jna', version: '4.5.0'
     compile group: 'com.google.inject', name: 'guice', version: '4.1.0'
     compile group: 'com.fasterxml.jackson.core', name: "jackson-databind", version: "2.9.4"
+    compile 'com.github.dyorgio.runtime:out-process:1.0.0'
 }
 
 group 'org.jetbrains'
