--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,15 @@ plugins {
     id "org.jetbrains.intellij" version "0.2.17"
 }
 
+apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'org.jetbrains.intellij'
-apply plugin: 'java'
+
 
 intellij {
     localPath 'C:/Program Files/JetBrains/IntelliJ IDEA Community Edition 2017.2.5'
     plugins 'coverage' //Bundled plugin dependencies
-    pluginName 'plugin_name_goes_here'
+    pluginName 'CertLoader'
 }
 
 repositories {
@@ -29,5 +30,5 @@ dependencies {
     compile 'com.github.dyorgio.runtime:out-process:1.0.0'
 }
 
-group 'org.jetbrains'
-version '1.2' // Plugin version
+group 'com.scarlatti'
+version '2.1.0' // Plugin version
