--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,17 +1,15 @@
 <idea-plugin>
-  <id>com.your.company.unique.plugin.id</id>
-  <name>Plugin display name here</name>
-  <version>1.0</version>
-  <vendor email="support@yourcompany.com" url="http://www.yourcompany.com">YourCompany</vendor>
+  <id>com.scarlatti.certloader</id>
+  <name>CertLoader</name>
+  <version>2.1.0</version>
+  <vendor email="support@yourcompany.com" url="http://github.com/alessandroscarlatti">Alessandro Scarlatti Productions</vendor>
 
   <description><![CDATA[
-      Enter short description for your plugin here.<br>
-      <em>most HTML tags may be used</em>
+      Easily install SSL Certificates to local keystores.
     ]]></description>
 
   <change-notes><![CDATA[
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>
+      Major UI improvements.
     ]]>
   </change-notes>
 
