--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,11 @@ dependencies {
     compile group: 'net.java.dev.jna', name: 'jna', version: '4.5.0'
     compile group: 'com.google.inject', name: 'guice', version: '4.1.0'
     compile group: 'com.fasterxml.jackson.core', name: "jackson-databind", version: "2.9.4"
-    compile 'com.github.dyorgio.runtime:out-process:1.0.0'
+//    compile 'com.github.dyorgio.runtime:out-process:1.0.0'
 }
 
 group 'com.scarlatti'
-version '2.1.0' // Plugin version
+version '2.2.0' // Plugin version
 
 task copyDistribution(type: Copy) {
     from "build/distributions/${certLoaderPluginName}-${version}.zip"
