--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>com.scarlatti.certloader</id>
   <name>CertLoader</name>
-  <version>2.1.0</version>
+  <version>2.2.0</version>
   <vendor email="support@yourcompany.com" url="http://github.com/alessandroscarlatti">Alessandro Scarlatti Productions</vendor>
 
   <description><![CDATA[
@@ -9,7 +9,8 @@
     ]]></description>
 
   <change-notes><![CDATA[
-      Major UI improvements.
+      • Now requests UAC elevation to gain admin privileges when writing to keystore.
+      • Improved URL parsing
     ]]>
   </change-notes>
 
