add bat and executable jar to distr

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 }
 
 group 'com.scarlatti'
-version '2.3.0' // Plugin version
+version '2.3.1' // Plugin version
 
 task copyDistribution(type: Copy) {
     from "build/distributions/${certLoaderPluginName}-${version}.zip"
@@ -59,6 +59,42 @@ task guiExe(type: Launch4jLibraryTask, group: 'build') {
     headerType = "gui"
     companyName = "Scarlatti"
     manifest = "../../resources/main/application.manifest"
+    stayAlive = true
+}
+
+task fatJar(type: Jar) {
+//    manifest {
+//        attributes 'Main-Class': 'com.baeldung.fatjar.Application'
+//    }
+    baseName = rootProject.name  + "asdf"
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
+task runnableJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'com.scarlatti.certloader.App'
+    }
+    baseName = rootProject.name  + "-executable"
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+    archiveName = "CertLoader${version}.jar"
+}
+
+task guiExe2(type: Launch4jLibraryTask, group: 'build') {
+
+    // these two lines go together...
+    copyConfigurable = project.tasks.fatJar.outputs.files
+    jar = "lib/${fatJar.outputs.files[0].name}"
+    println "fatJar.outputs.files: ${project.tasks.fatJar.outputs.files as List}"
+    outputDir = "/launch4j/CertLoader"
+    outfile = "certloader.exe"
+    mainClassName = 'com.scarlatti.certloader.App'
+    icon = '../../resources/main/key2.ico'  // point to the folder within the build resources
+    headerType = "gui"
+    companyName = "Scarlatti"
+    manifest = "../../resources/main/application.manifest"
+
 }
 
 buildPlugin.finalizedBy copyDistribution
@@ -70,6 +106,15 @@ task release(type: Zip, group: 'build') {
     archiveName "CertLoader-${version}.zip"
     destinationDir(file('/release/bin'))
 
+}
+
+task executableJarRelease(type: Zip, group: 'build') {
+    dependsOn runnableJar
+    println runnableJar.outputs.files.singleFile
+    from runnableJar.outputs.files.singleFile
+    from file ("CertLoader-${version}-ExecutableJar.bat")
+    archiveName "CertLoader-${version}-ExecutableJar.zip"
+    destinationDir(file('/release/bin'))
 }
 
 guiExe.finalizedBy release
